chore: temporary storybook 7 dark mode fix

--- a/.storybook/index.sass
+++ b/.storybook/index.sass
@@ -1,5 +1,9 @@
 @use "../packages/theme/lib/index"
 
+// v7 & dark-mode compat (https://github.com/hipstersmoothie/storybook-dark-mode/issues/205)
+html.dark
+  background: #181818
+
 body
   padding: 20px
 
